--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,7 @@
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
+/public/assets
+/public/traditional_chinese_website
+config/database.yml
+config/setting.yml
